public/index.css
* {
    padding: 0;
    margin: 0;
}

body {
    height: 100vh;
    background-color: #2F4F4F;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Press Start 2P', cursive;
    cursor: url(../image/cursor/octocat-white.png), auto;
}

/******************** HEAD********************/
#head {
    height: 8vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-end
}

#head>a>img {
    height: 5vh;
    width: auto;
    margin-right: 8vh;
    opacity: 0.6;
    height: calc(1rem + 1vh);
}

#head>a>img:hover {
    opacity: 0.85;
}

/********************Title********************/

#title-box {
    height: 20vh;
    width: 92vw;
    display: flex;
    justify-content: center;
    align-items: center;
    Flex-direction: column;
    font-size: 1.5em;
    border: 2px solid rgb(189, 181, 181);
    border-radius: 1rem;
}

#title {
    font-size: calc(1rem + 1vw);
    margin-bottom: 12px;
    color: #fd5353;
}

#description {
    font-size: calc(0.7rem + 1vw);
    color: #dbd8d8;

}

@media screen and (max-width: 1379px) {
    #title-box {
        font-size: 1rem;
    }
}

/******************** Serach Box ********************/

#search-box {
    width: 90%;
    height: 25vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

#user-input {
    height: 8vh;
    width: 45vw;
    font-family: 'Press Start 2P', cursive;
    color: rgb(82, 94, 252);
    border: 5px solid#A9A9A9;
    background-color: #dbd8d8;
    border-radius: 20px;
    text-align: center;
    flex: 1 1 30rem;
    font-size: calc(0.5rem + 1vw);
    cursor: url(../image/cursor/octocat-black.png), auto;
}

#search-btn {
    height: 8vh;
    width: 10vw;
    font-family: 'Press Start 2P', cursive;
    color: #e9e9e9;
    background-color: #696969;
    cursor: url(../image/cursor/octocat-white.png), auto;
    border: 5px solid#bbb9b9;
    border-radius: 20px;
    text-align: center;
    flex: 1 1 10rem;
    font-size: calc(0.5rem + 1vw);
    margin-left: 12px;
}

/******************** Ou ********************/
#output-box {
    height: 40vh;
    width: 92vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    border: 2px solid rgb(189, 181, 181);
    border-radius: 1rem;
    align-items: center;
    justify-content: space-evenly;
}

#output-box div {
    width: 10rem;
    height: 10rem;
    margin: 1rem;
}

#profile-img {
    height: 100%;
    width: 100%;
    border: 2px solid rgb(189, 181, 181);
    border-radius: 100px;
    visibility: hidden;
    flex: 1 1 5rem;
}

#output {
    font-size: calc(0.5rem + 1vw);
    flex: 1 1 20rem;
    text-align: center;
}

/******** Footer ********/

#footer-box {
    height: 7vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 0.6em;
}

#footer-el {
    text-decoration: none;
    color: #dbd8d8;
}

#footer-el>a {
    text-decoration: none;
    color: rgb(253, 83, 83);
}

#footer-el>a:hover {
    color: #dbd8d8;
}

